--- a/inTheMoment/package.json
+++ b/inTheMoment/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@realm/react": "^0.4.3",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
@@ -20,7 +21,8 @@
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "realm": "^11.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
