--- a/inTheMoment/package.json
+++ b/inTheMoment/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inTheMoment",
+  "name": "inthemoment",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,6 +22,8 @@
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-svg-transformer": "^1.0.0",
     "realm": "^11.5.2"
   },
   "devDependencies": {
