--- a/inTheMoment/package.json
+++ b/inTheMoment/package.json
@@ -19,6 +19,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.4.0",
     "react-native-paper": "^5.2.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
@@ -45,5 +46,20 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "reactNativePersmissions":{
+    "reactNativePermissionsIOS": [ 
+    "AppTrackingTransparency",
+    "LocationAccuracy",
+    "LocationAlways",
+    "LocationWhenInUse",
+    "Notifications"
+    ],
+    "devDependecies":{
+      "pod-install": "0.1.38" 
+    },
+    "scripts": {
+      "postinstall": "react-native setup-ios-permissions && pod-install"
+    }
   }
 }
